[package]
name = "resvg-cairo-capi"
version = "0.9.1"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
keywords = ["svg", "render", "raster", "c-api"]
license = "MPL-2.0"
edition = "2018"
workspace = ".."

[lib]
name = "resvg_cairo"
path = "lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
cairo-rs = { version = "0.8.0", default-features = false, features = ["png"] }
cairo-sys-rs = "0.9"
fern = "=0.5.8" # fixed version without chrono
log = "0.4"
resvg-cairo = { path = "../" }
usvg = { path = "../../usvg" }

[features]
default = ["text"] # enables SVG Text support
text = ["usvg/text", "resvg-cairo/text"]
