[package]
name = "resvg-cairo-capi"
version = "0.10.0"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
keywords = ["svg", "render", "raster", "c-api"]
license = "MPL-2.0"
edition = "2018"
workspace = ".."

[lib]
name = "resvg_cairo"
path = "lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
cairo-rs = { version = "0.8", default-features = false }
cairo-sys-rs = "0.9"
log = "0.4"
resvg-cairo = { path = "../" }
usvg = { version = "0.10", default-features = false }

[features]
default = ["text"] # enables SVG Text support
text = ["usvg/text", "resvg-cairo/text"]
