[package]
name = "resvg-qt-capi"
version = "0.9.1"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
keywords = ["svg", "render", "raster", "c-api"]
license = "MPL-2.0"
edition = "2018"
workspace = ".."

[lib]
name = "resvg_qt"
path = "lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
log = "0.4"
resvg-qt = { path = "../" }
usvg = { path = "../../usvg" }

[features]
default = ["text"]
text = ["usvg/text", "resvg-qt/text"] # enables SVG Text support
