[package]
name = "resvg-qt-capi"
version = "0.10.0"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
keywords = ["svg", "render", "raster", "c-api"]
license = "MPL-2.0"
edition = "2018"
workspace = ".."

[lib]
name = "resvg_qt"
path = "lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
log = "0.4"
resvg-qt = { path = "../" }
usvg = { version = "0.10", default-features = false }

[features]
default = ["text"]
text = ["usvg/text", "resvg-qt/text"] # enables SVG Text support
