[package]
name = "resvg-skia-capi"
version = "0.9.1"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
keywords = ["svg", "render", "raster", "c-api"]
license = "MPL-2.0"
edition = "2018"
workspace = ".."

[lib]
name = "resvg_skia"
path = "lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
fern = "=0.5.8" # fixed version without chrono
log = "0.4"
resvg-skia = { path = "../" }
usvg = { path = "../../usvg" }

[features]
default = ["text"] # enables SVG Text support
text = ["usvg/text", "resvg-skia/text"]
