[package]
name = "resvg-skia-capi"
version = "0.10.0"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
keywords = ["svg", "render", "raster", "c-api"]
license = "MPL-2.0"
edition = "2018"
workspace = ".."

[lib]
name = "resvg_skia"
path = "lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
log = "0.4"
resvg-skia = { path = "../" }
usvg = { version = "0.10", default-features = false }

[features]
default = ["text"] # enables SVG Text support
text = ["usvg/text", "resvg-skia/text"]
