[package]
name = "regression"
version = "0.1.0"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
license = "MIT"
edition = "2018"

[workspace]

[[bin]]
name = "regression"
path = "main.rs"

[dependencies]
image = { version = "0.22", default-features = false, features = ["png_codec"] }
pico-args = "0.2"
rayon = "1.1"
wait-timeout = "0.2"
