[package]
name = "regression"
version = "0.1.0"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
license = "MIT"

[dependencies]
walkdir = "0.1"
git2 = "0.6"
subprocess = "0.1"

[dependencies.clap]
version = "2"
default-features = false

[dependencies.image]
version = "0.18"
default-features = false
features = ["png_codec"]
